--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -74,6 +74,7 @@
                                     <i class="fa fa-user-secret" aria-hidden="true"></i>
                                     <p class="admin-list-item">User Test Roles</p>
                                     {# doesnt work locally #}
+                                    {# local session cookie not being stored #}
                                 </a>
                             </li>
                             <li>
