--- a/tinker/templates/admin_user_bar.html
+++ b/tinker/templates/admin_user_bar.html
@@ -1,4 +1,3 @@
-|{{ session['admin_viewer']|safe }}|
 {% if session['admin_viewer'] %}
     <div class="admin-user-bar">
         <p>Viewing
@@ -17,12 +16,12 @@
                 $.ajax({
                     type: 'POST',
                     url: '{{ url_for('user_roles.UserRolesView:test_roles_and_users_remove') }}',
-{#                        success: function(){#}
-{#                            window.location.href = '/'#}
-{#                        },#}
-{#                        error: function(){#}
-{#                            //TODO Write an error function#}
-{#                        }#}
+                        success: function(){
+                            window.location.href = '/'
+                        },
+                        error: function(){
+                            //TODO Write an error function
+                        }
                 });
             });
         })
