wrote error messages and fixed admin bar jquery

--- a/tinker/templates/admin_user_bar.html
+++ b/tinker/templates/admin_user_bar.html
@@ -13,15 +13,12 @@
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", function() {
             $(document).on('click', '#admin_return', function(){
-                $.ajax({
-                    type: 'POST',
-                    url: '{{ url_for('user_roles.UserRolesView:test_roles_and_users_remove') }}',
-                        success: function(){
-                            window.location.href = '/'
-                        },
-                        error: function(){
-                            //TODO Write an error function
-                        }
+                $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_remove') }}', {'role': role, 'username': username }, function (data) {
+                    if( data == 'error'){
+                        alert('Error: Contact Web Services for further assistance');
+                    } else {
+                        window.location.href = data;
+                    }
                 });
             });
         })
