Eliminated todo for temporary link replacing maxcdn, removed unnecessary css

--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -32,9 +32,7 @@
 
 
             <!--  Fonts and icons     -->
-            {# todo: temporary fix since the maxcdn is down, change back to maxcdn when able #}
-            <link href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css" rel="stylesheet">
-{#            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">#}
+            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
             <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
             <link href="https://cdn3.bethel.edu/tinker/css/themify-icons.css" rel="stylesheet">
 
