Fixed the Margin

--- a/tinker/admin/proof_points/templates/filter-results.html
+++ b/tinker/admin/proof_points/templates/filter-results.html
@@ -19,7 +19,7 @@
         background-color: #f5f5f5;
         border-radius: 6px;
         border: 1px solid #e5e5e5;
-        margin: 1em;
+        margin: 1em 1em 1em 0em;
     }
 </style>
 <form>
