--- a/tinker/templates/user_roles_home.html
+++ b/tinker/templates/user_roles_home.html
@@ -25,6 +25,8 @@
                     <input type="text" id="username">
                     <a id='view-by-username' class="btn btn-primary admin-viewer">View</a>
                 </label>
+                <hr/>
+                    <a id="clear-session" class="btn btn-primary clear-session">Clear Session</a>
             </div>
         </div>
     </div>
@@ -47,7 +49,14 @@
                         window.location.href = data;
                     }
                 });
-            })
+            });
+            $('#clear-session').click(function(){
+                console.log('click');
+                $.post('{{ url_for('user_roles.UserRolesView:session_clear') }}', function() {
+                    alert('session cleared');
+                    window.location.href = '/';
+                })
+            });
         });
     </script>
 {% endblock %}
