--- a/tinker/templates/user_roles_home.html
+++ b/tinker/templates/user_roles_home.html
@@ -8,18 +8,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
-                <p>You may choose to view Tinker by viewing as a single role or by viewing as a specific username.</p>
-                <label>
-                    Role
-                    <br />
-                    <select id="role">
-                        {% for role in cascade_md_roles['portal-roles'] %}
-                            <option value="{{ role['value'] }}">{{ role['value'] }}</option>
-                        {% endfor %}
-                    </select>
-                </label>
-                    <a id='view-by-role' class="btn btn-primary admin-viewer">View</a>
-                <hr/>
+                <p>Enter a username to view Tinker as that user.</p>
                 <label>
                     Username
                     <input type="text" id="username">
@@ -36,13 +25,10 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('.admin-viewer').click(function(){
-                var role = '';
                 var username = '';
-                if( $(this).attr('id') == 'view-by-role')
-                    role = $('#role').val();
                 if( $(this).attr('id') == 'view-by-username')
                     username = $('#username').val();
-                $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'role': role, 'username': username }, function (data) {
+                $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'username': username }, function (data) {
                     if( data == 'error'){
                         alert('Error: Contact Web Services for further assistance');
                     } else {
