Desperate changes to fix stuff.

--- a/tinker/templates/admin_user_bar.html
+++ b/tinker/templates/admin_user_bar.html
@@ -17,7 +17,7 @@
                     if( data == 'error'){
                         alert('Error: Contact Web Services for further assistance');
                     } else {
-                        window.location.href = data;
+                        window.location.href = '/';
                     }
                 });
             });
