--- a/tinker/templates/user_roles_home.html
+++ b/tinker/templates/user_roles_home.html
@@ -28,6 +28,7 @@
                 var username = '';
                 if( $(this).attr('id') == 'view-by-username')
                     username = $('#username').val();
+                console.log(username)
                 $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'username': username }, function (data) {
                     if( data == 'error'){
                         alert('Error: Contact Web Services for further assistance');
