--- a/tinker/templates/user_roles_home.html
+++ b/tinker/templates/user_roles_home.html
@@ -25,11 +25,10 @@
     <script type="text/javascript">
         $(document).ready(function(){
             $('.admin-viewer').click(function(){
-                var username = '';
-                if( $(this).attr('id') == 'view-by-username')
-                    username = $('#username').val();
+                    var username = $('#username').val();
                 console.log(username)
                 $.post('{{ url_for('user_roles.UserRolesView:test_roles_and_users_submit') }}', {'username': username }, function (data) {
+{#                    alert(data);#}
                     if( data == 'error'){
                         alert('Error: Contact Web Services for further assistance');
                     } else {
