Moved templates without renaming

--- a/tinker/templates/admin/publish/publish-home.html
+++ b/tinker/templates/admin/publish/publish-home.html
@@ -22,7 +22,7 @@
                     <div class="content">
                         <p>Blocks that are published publish out each page in the relationships tab.</p>
 
-                        <form action="." id="publish-search-form">
+                        <form action="../../../admin/publish/templates" id="publish-search-form">
 
                             <div class="zero-left-padding col-sm-4">
                                 Search by Name:
