--- a/tinker/admin/program_search/templates/program-search-ajax.html
+++ b/tinker/admin/program_search/templates/program-search-ajax.html
@@ -1,34 +1,38 @@
-{% for row in search_results %}
-  <tr id='{{ row.id }}' class="program-search-row table-hover">
-    <td >
-        <span class="key">{{ row.actual_name }}</span>
-    </td>
-    <td>
-        <span class="tag">{{ row.tag }}</span>
-    </td>
-    <td>
-        <span class="outcome">
-        {% if row.outcome %}
-            X
-        {% endif %}
-        </span>
-    </td>
-    <td>
-        <span class="topic">
-        {% if row.topic %}
-            X
-        {% endif %}
-        </span>
-    </td>
-    <td>
-        <span class="program-other">
-        {% if row.other %}
-            X
-        {% endif %}
-        </span>
-    </td>
-    <td>
-        <input type="checkbox" class="delete-checkbox" id="{{ row.id }}"/>
-    </td>
-  </tr>
-{% endfor %}
+{% if search_results|length > 0 %}
+    {% for row in search_results %}
+      <tr id='{{ row.id }}' class="program-search-row table-hover">
+        <td>
+            <span class="key">{{ program_concentrations[row.key] }}</span>
+        </td>
+        <td>
+            <span class="tag">{{ row.tag }}</span>
+        </td>
+        <td>
+            <span class="outcome">
+            {% if row.outcome %}
+                X
+            {% endif %}
+            </span>
+        </td>
+        <td>
+            <span class="topic">
+            {% if row.topic %}
+                X
+            {% endif %}
+            </span>
+        </td>
+        <td>
+            <span class="program-other">
+            {% if row.other %}
+                X
+            {% endif %}
+            </span>
+        </td>
+        <td>
+            <input type="checkbox" class="delete-checkbox" id="{{ row.id }}"/>
+        </td>
+      </tr>
+    {% endfor %}
+{% else %}
+    <p>There are no results to display.</p>
+{% endif %}
