--- a/tinker/admin/program_search/templates/program-search-ajax.html
+++ b/tinker/admin/program_search/templates/program-search-ajax.html
@@ -34,5 +34,6 @@
       </tr>
     {% endfor %}
 {% else %}
-    <p>There are no results to display.</p>
+    {# The class is used to unit test #}
+    <p class="program-search-row">There are no results to display.</p>
 {% endif %}
