--- a/tinker/templates/creative_tim_sidebar.html
+++ b/tinker/templates/creative_tim_sidebar.html
@@ -42,12 +42,13 @@
                 </li>
             {% endif %}
 
-{#            <li class="{% if 'office-hours/' in request.path %}active{% endif %}">#}
-{#                <a href="{{ url_for('office_hours.OfficeHoursView:index') }}">#}
-{#                    <i class="fa fa-clock-o"></i>#}
-{#                    <p>Office Hours</p>#}
-{#                </a>#}
-{#            </li>#}
+            {# todo: need to add permissions #}
+            <li class="{% if 'office-hours/' in request.path %}active{% endif %}">
+                <a href="{{ url_for('office_hours.OfficeHoursView:index') }}">
+                    <i class="fa fa-clock-o"></i>
+                    <p>Office Hours</p>
+                </a>
+            </li>
 
             {% if 'Administrators' in session['groups'] or 'Tinker Redirects' in session['groups'] %}
                 <li class="dropdown {% if 'admin/' in request.path %}active{% endif %}">
