Fixed 2 redirects integration tests

--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -78,7 +78,7 @@
 
             function updateTable(data) {
                 $("#redirects-table").html(data);
-                $('#new-redirect-to').attr("disabled", false)
+                $('#new-redirect-to').attr("disabled", false);
                 //should the inputs be disabled?
                 var search_val = $("#new-redirect-from").val();
                 $(".from_path").each(function () {
