Updated wording for faculty bio confirmation page

--- a/tinker/templates/faculty-bios/confirm.html
+++ b/tinker/templates/faculty-bios/confirm.html
@@ -15,8 +15,7 @@
                 {% else %}
                     <p>You've successfully edited your bio. Your edits have been sent for approval but will be ready to
                         view in 2-3 business days. Thanks for keeping your bio up to date!</p>
-                    <p>If you have any questions, you can contact Lauren Pareigat (CAS), Annette Abel (CAPS/GS), or
-                        Jenny Vang (Seminary).</p>
+                    <p>If you have any questions, you can contact the Office of Marketing and Communications at <a href="mailto:web-services@bethel.edu">web-services@bethel.edu</a> or Jenny Vang (seminary profiles).</p>
                 {% endif %}
             </div>
         </div>
