--- a/tinker/templates/events/form.html
+++ b/tinker/templates/events/form.html
@@ -341,9 +341,9 @@
 
             function offCampusLocation(clear_values) {
                 if (clear_values){ //Clears other options if the user switches in between them
-                    //$("#off_location_wrap")
-                    //$("#on_campus_wrap")
-                    //$("#other_wrap")
+                    $("#off_campus_location").val('');
+                    $("#on_campus_location").val('none');
+                    $("#other_on_campus").val('');
                 }
                 var location = $("#location")[0];
                 var val = location.options[location.selectedIndex].innerHTML;
